homelab/k8s-mcp-server/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: k8s-mcp-server
  namespace: mcp
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    middlewares:
      - nc-maintenance-maintenance-errors@kubernetescrd
    match: Host(`mcp.k8s.hu.ls`)
    services:
    - name: k8s-mcp-server
      port: 8080
  tls:
    certResolver: letsencrypt
